--- a/profile/profile.html
+++ b/profile/profile.html
@@ -20,7 +20,7 @@
       <ul class="navigation">
          <li data-slide="1">IZ*ONE</li>
          <li data-slide="2">Chaeyeon</li>
-         <li data-slide="3">Minjoo</li>
+         <li data-slide="3">Minju</li>
          <li data-slide="4">Chaewon</li>
          <li data-slide="5">Hitomi</li>
          <li data-slide="6">Hyewon</li>
@@ -48,7 +48,7 @@
         <div class="wrapper">
             <div class="profile">
                <hr>
-                  <p>IZ ONE (Korean: 아이즈원, translit. Aijeuwon; Japanese: アイズワン, translit. Aizuwan; stylized as IZ*ONE) is a South Korean and Japanese girl group formed by CJ E&M through the 2018 Mnet reality competition television show Produce 48. The group is composed of twelve members: Jang Won-young, Sakura Miyawaki, Jo Yu-ri, Choi Ye-na, Ahn Yu-jin, Nako Yabuki, Kwon Eun-bi, Kang Hye-won, Hitomi Honda, Kim Chae-won, Kim Min-joo and Lee Chae-yeon.<br>
+                  <p>IZ ONE (Korean: 아이즈원, translit. Aijeuwon; Japanese: アイズワン, translit. Aizuwan; stylized as IZ*ONE) is a South Korean and Japanese girl group formed by CJ E&M through the 2018 Mnet reality competition television show Produce 48. The group is composed of twelve members: Jang Wonyoung, Miyawaki Sakura, Jo Yuri, Choi Yena, Ahn Yujin, Yabuki Nako, Kwon Eunbi, Kang Hyewon, Honda Hitomi, Kim Chaewon, Kim Minju and Lee Chaeyeon.<br>
 The group will be managed by Pledis Entertainment and Stone Music Entertainment in South Korea, and AKS in Japan.</p>
             </div>
          </div>
@@ -64,30 +64,35 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
               <img src="images/girls/chaeyeon.jpg">
                 <div class="profile-title"><span>이채연</span>Lee Chaeyeon<hr></div>
                 <div class="profile-description">
-                   <br>Birthday:    <strong>January 11, 2000</strong>
-                   <br>Nationality: <strong>Korean</strong>
-                   <br>Height:      <strong>164cm (5'4)</strong>
-                   <br>Weight:      <strong>47kg (104lbs)</strong>
-                   <br>Blood Type:  <strong>A</strong>
-                   <br>Company:     <strong>WM Entertainment</strong>
+                   Name: Lee Chaeyeon
+                   <br>Hangul: 이채연
+                   <br>Katakana: イ・チェヨン
+                   <br>Position: N/A
+                   <br>Birthday: January 11, 2000
+                   <br>Nationality: Korean
+                   <br>Height: 164cm (5'4)
+                   <br>Weight: 47kg (104lbs)
+                   <br>Blood Type: A
+                   <br>Company: WM Entertainment
              </div>
          </div>
 
          <a class="button" data-slide="3" title=""></a>
       </section>
 
-	  <!--Kim Minjoo-->
+	  <!--Kim Minju-->
       <section class="slide" id="slide3" data-slide="3" >
          <div class="wrapper_title">
             <div class="profile">
-                <div class="profile-title">Kim Minjoo</div>
+                <div class="profile-title"><span>김민주</span>Kim Minju</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Kim Minjoo
+                   Name: Kim Minju
                    <br>Hangul: 김민주
-                   <br>Position: N/A
+                   <br>Katakana: キム・ミンジュ
                    <br>Birthday: February 5, 2001
+                   <br>Nationality: Korean
                    <br>Height: 165cm (5'5)
                    <br>Weight: 45kg (99lbs)
                    <br>Blood Type: AB
@@ -104,14 +109,15 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide4" data-slide="4" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Kim Chaewon</div>
+                <div class="profile-title"><span>김채원</span>Kim Chaewon</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Kim Chaewon
+                   Name: Kim Chaewon
                    <br>Hangul: 김채원
-                   <br>Position: N/A
+                   <br>Katakana: キム・チェウォン
                    <br>Birthday: August 1, 2000
+                   <br>Nationality: Korean
                    <br>Height: 163cm (5'4)
                    <br>Weight: 42kg (93lbs)
                    <br>Blood Type: B
@@ -128,19 +134,20 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide5" data-slide="5" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Honda Hitomi</div>
+                <div class="profile-title"><span>本田仁美</span>Honda Hitomi</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Honda Hitomi
+                   Name: Honda Hitomi
+                   <br>Kanji: 本田仁美
+                   <br>Hiragana: ほんだ ひとみ
                    <br>Hangul: 혼다 히토미
-                   <br>Position: N/A
                    <br>Birthday: October 6, 2001
                    <br>Height: 158cm (5'2)
                    <br>Weight: 44kg (97lbs)
                    <br>Blood Type: A
                    <br>Company: AKS
-                   <br>Also In*: AKB48
+                   <br>Also in: AKB48 Team 8 &amp; Team B
                    </p>
                 </div>
              </div>
@@ -153,14 +160,15 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide6" data-slide="6" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Kang Hyewon</div>
+                <div class="profile-title"><span>강혜원</span>Kang Hyewon</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Kang Hyewon
+                   Name: Kang Hyewon
                    <br>Hangul: 강혜원
-                   <br>Position: N/A
+                   <br>Katakana: カン・ヘウォン
                    <br>Birthday: July 5, 1999
+                   <br>Nationality: Korean
                    <br>Height: 163cm (5'4)
                    <br>Weight: 43kg (95lbs)
                    <br>Blood Type: B
@@ -177,19 +185,20 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide7" data-slide="7" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Kwon Eunbi</div>
+                <div class="profile-title"><span>권은비</span>Kwon Eunbi</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Kwon Eunbi
+                   Name: Kwon Eunbi
                    <br>Hangul: 권은비
-                   <br>Position: N/A
+                   <br>Katakana: クォン・ウンビ
                    <br>Birthday: September 27, 1995
+                   <br>Nationality: Korean
                    <br>Height: 160cm (5'3)
                    <br>Weight: 46kg (101lbs)
                    <br>Blood Type: A
                    <br>Company: Woolim Entertainment
-                   <br>Formerly of*: Ye-A as Ka.Zoo
+                   <br>Formerly of: Ye-A as Ka.Zoo
                    </p>
                 </div>
              </div>
@@ -203,15 +212,19 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
          <div class="wrapper_title">
              <div class="profile">
                 <img src="images/girls/nako.jpg">
-                <div class="profile-title"><span>야부키 나코</span>Yabuki Nako<hr></div>
+                <div class="profile-title"><span>矢吹奈子</span>Yabuki Nako<hr></div>
                 <div class="profile-description">
-                   <br>Birthday:    <strong>June 18, 2001</strong>
-                   <br>Nationality: <strong>Japanese</strong>
-                   <br>Height:      <strong>149cm (4'10)</strong>
-                   <br>Weight:      <strong>40kg (88lbs)</strong>
-                   <br>Blood Type:  <strong>N/A</strong>
-                   <br>Company:     <strong>AKS</strong>
-                   <br>Also In:     <strong>HKT48</strong>
+                   Name: Yabuki Nako
+                   <br>Kanji: 矢吹奈子
+                   <br>Hiragana: やぶき なこ
+                   <br>Hangul: 야부키 나코
+                   <br>Birthday: June 18, 2001
+                   <br>Nationality: Japanese
+                   <br>Height: 149cm (4'10)
+                   <br>Weight: 40kg (88lbs)
+                   <br>Blood Type: N/A
+                   <br>Company: AKS
+                   <br>Also in: HKT48 Team H
                    </p>
                 </div>
              </div>
@@ -228,12 +241,15 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
               <img src="images/girls/yujin.jpg">
                 <div class="profile-title"><span>안유진</span>Ahn Yujin<hr></div>
                 <div class="profile-description">
-                   <br>Birthday:    <strong>September 1, 2003</strong>
-                   <br>Nationality: <strong>Korean</strong>
-                   <br>Height:      <strong>168cm (5'6)</strong>
-                   <br>Weight:      <strong>48kg (106lbs)</strong>
-                   <br>Blood Type:  <strong>A</strong>
-                   <br>Company:     <strong>Starship Entertainment</strong>
+                   Name: Ahn Yujin
+                   <br>Hangul: 안유진
+                   <br>Katakana: アン・ユジン
+                   <br>Birthday: September 1, 2003
+                   <br>Nationality: Korean
+                   <br>Height: 168cm (5'6)
+                   <br>Weight: 48kg (106lbs)
+                   <br>Blood Type: A
+                   <br>Company: Starship Entertainment
              </div>
         </div>
 
@@ -244,14 +260,15 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide10" data-slide="10" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Choi Yena</div>
+                <div class="profile-title"><span>최예나</span>Choi Yena</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Choi Yena
+                   Name: Choi Yena
                    <br>Hangul: 최예나
-                   <br>Position: N/A
+                   <br>Katakana: チェ・イェナ
                    <br>Birthday: September 29, 1999
+                   <br>Nationality: Korean
                    <br>Height: 163cm (5'4)
                    <br>Weight: 45kg (99lbs)
                    <br>Blood Type: A
@@ -268,14 +285,15 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide11" data-slide="11" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Jo Yuri</div>
+                <div class="profile-title"><span>조유리</span>Jo Yuri</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Jo Yuri
+                   Name: Jo Yuri
                    <br>Hangul: 조유리
-                   <br>Position: N/A
+                   <br>Katakana: チョ・ユリ
                    <br>Birthday: October 22, 2001
+                   <br>Nationality: Korean
                    <br>Height: 160cm (5'3)
                    <br>Weight: 45kg (99lbs)
                    <br>Blood Type: AB
@@ -292,20 +310,20 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide12" data-slide="12" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Miyawaki Sakura</div>
+                <div class="profile-title"><span>宮脇咲良</span>Miyawaki Sakura</div>
                 <hr>
                 <div class="profile-description">
-                   Name (Real Name): Miyawaki Sakura
+                   Name: Miyawaki Sakura
+                   <br>Kanji: 宮脇咲良
+                   <br>Hiragana: みやわき さくら
                    <br>Hangul: 미야와키 사쿠라
-                   <br>Position: N/A
                    <br>Birthday: March 19, 1998
                    <br>Nationality: Japanese
                    <br>Height: 163cm (5'4)
                    <br>Weight: 46kg (101lbs)
                    <br>Blood Type: A
                    <br>Company: AKS
-                   <br>Also In*: HKT48
-                   <br>Formerly of*: AKB48
+                   <br>Also in: HKT48 Team KIV
                    </p>
                 </div>
              </div>
@@ -318,14 +336,15 @@ The group will be managed by Pledis Entertainment and Stone Music Entertainment 
       <section class="slide" id="slide13" data-slide="13" >
          <div class="wrapper_title">
              <div class="profile">
-                <div class="profile-title">Jang Wonyoung</div>
+                <div class="profile-title"><span>장원영</span>Jang Wonyoung</div>
                 <hr>
                 <div class="profile-description">
                    <p>
-                   Name (Real Name): Jang Wonyoung
+                   Name: Jang Wonyoung
                    <br>Hangul: 장원영
-                   <br>Position: Maknae
+                   <br>Katakana: チャン・ウォニョン
                    <br>Birthday: August 31, 2004
+                   <br>Nationality: Korean
                    <br>Height: 168cm (5'6)
                    <br>Weight: 47kg (104lbs)
                    <br>Blood Type: O
